--- a/xmlChecker/pom.xml
+++ b/xmlChecker/pom.xml
@@ -3,7 +3,13 @@
   <groupId>siima</groupId>
   <artifactId>xmlChecker</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  
+	<properties>
+		<java-version>1.7</java-version>
+	</properties>
+	
   <dependencies>
+  
   	<!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
 	<dependency>
     	<groupId>org.apache.poi</groupId>
@@ -42,6 +48,22 @@
     	<version>1.7.21</version>
     	<scope>test</scope>
 	</dependency>
+	
   </dependencies>
-
+  <build>
+    <plugins>
+     <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>2.5.1</version>
+        <configuration>
+        <source>1.7</source>
+        <target>1.7</target>
+        <compilerArgument>-Xlint:all</compilerArgument>
+        <showWarnings>true</showWarnings>
+        <showDeprecation>true</showDeprecation>
+        </configuration>
+	</plugin>
+   </plugins>
+  </build>
 </project>
