--- a/xmlChecker/pom.xml
+++ b/xmlChecker/pom.xml
@@ -64,6 +64,24 @@
         <showDeprecation>true</showDeprecation>
         </configuration>
 	</plugin>
+	<plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-resources-plugin</artifactId>
+      <version>2.4</version>
+      <configuration>
+      <encoding>UTF-8</encoding>
+      </configuration>
+    </plugin>
    </plugins>
+    <resources>
+        <resource>
+            <!-- filtering>true</filtering-->
+            <directory>src/main/resources</directory>
+        </resource>
+        <resource>
+            <!-- filtering>true</filtering-->
+            <directory>src/test/resources</directory>
+        </resource>
+    </resources>
   </build>
 </project>
