--- a/xmlChecker/pom.xml
+++ b/xmlChecker/pom.xml
@@ -35,6 +35,11 @@
     	<artifactId>log4j-core</artifactId>
     	<version>2.13.0</version>
 	</dependency>
+	<dependency>
+		<groupId>org.apache.logging.log4j</groupId>
+		<artifactId>log4j-api</artifactId>
+		<version>2.13.0</version>
+	</dependency>
 	<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
 	<dependency>
     	<groupId>org.slf4j</groupId>
@@ -48,7 +53,7 @@
     	<version>1.7.21</version>
     	<scope>test</scope>
 	</dependency>
-	
+
   </dependencies>
   <build>
     <plugins>
